project-settings-app/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import '@siemens/element-icons/style/siemens-element-icons.css';
@import '@siemens/element-theme/src/theme.scss';
@import '@siemens/element-ng/element-ng.scss';

:root, :root.theme-element {
  --element-brand-logo: url("https://upload.wikimedia.org/wikipedia/commons/5/5f/Siemens-logo.svg");
  --element-brand-logo-width: 100px;
  --element-brand-logo-height: 20px;
  --element-brand-logo-text: "Siemens";
}

:root.app--dark .header-logo, :root.theme-element.app--dark .header-logo {
  filter: brightness(0) invert(1);
}

